# algo_practice

./: .gitignore  README.md  index.md
c/: utils.h
c/04_linklist/: circular.c  delReciprocalN.c  findMiddle.c  hoop.c  makefile  reverse_single_list.c  single.c  single_list_lru.c
c/05_sort/: bubbleSort.c  countingSort.c  insertSort.c  mergeSort.c  selectSort.c
c/linklist/: delReciprocalN.c  hoop.c  link_common.c  link_common.h  merge_order_list.c  palindrome_str.c  palindrome_str_tmp.c  single.c  single_list_lru.c
c/problem/: main.c  printf.c  struct_point_fun.c  test.c
c/queue/: arrayQueue.c  circleQueue.c  linkListQueue.c
c/recursion/: step.c
c/sort/: countSort.c  insertSort.c  mergeSort.c  quickSort.c  radixSort.c
c/stack/: arrayStack.c  linkListStack.c
c/test/: 190712mergeSort.c  bubbleSort.c  insertSort.c  mergeSort.c  quickSort.c  quickSort0.c  quickSort1.c
images/tree/: trie.drawio
interview/case/: ti-01-最长子串.php
interview/leetcode/: 02.php  03-1.php  README.md
interview/shell/: test.sh
leetcode/: README.md
leetcode/c/: .gitignore  001.c  083  083.c  CMakeLists.txt  README.md  main.c  makefile
leetcode/c/fun/: 001.c  header.h  io_utils.h
leetcode/c/lib/: uthash.h
leetcode/go/: .gitignore  README.md  go.mod  main.go
leetcode/java/: .gitignore
leetcode/php/: 001.php  002.php  003.php  004.php  006.php  014.php  015.php  019.php  02.php  021.php  027.php  028.php  03.无重复字符的最长子串.php  032.php  033.php  040.combinationSum2.php  041.php  042.php  046.php  05.php  053.php  058.php  06-01.php  (+61 more)
php/: README.md  composer.json  test.php
(+289 files in other folders)
